Stop buttons wrapping when page width is reduced

--- a/style.css
+++ b/style.css
@@ -126,7 +126,8 @@
 }
 
 .hero-btn {
-    align-items: flex-start;
+    display: flex;
+    align-self: flex-start;
     border-radius: .5rem;
     border: none;
     background-color: var(--button-colour);
@@ -134,7 +135,7 @@
     font-weight: 600;
     color: var(--main-text);
     padding: .5rem;
-    width: 5vw;
+    padding: .5rem 1.5rem;
 }
 
 /* ------ image container ------ */
@@ -259,6 +260,7 @@
 .cta-btn {
     display: flex;
     align-self: center;
+    flex-shrink: 0;
     border-radius: .5rem;
     border: 0.2rem solid white;
     background-color: var(--button-colour);
